style: use getFirst() instead of get(0) in AgentRegistrationTest
Follow Java 21 SequencedCollection idiom per JAVA21.md.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>